This file only list changes to game code.  Changes to content can be found here:

http://onehouronelife.com/updateLog.php



Version 399    ???

--Support for new GH message.



Server Fixes:

--Fixed bug that wasn't actually setting cursed status of players that were
  sent to Donkeytown.  This was causing all kinds of issues (non-Donkeytown
  players could be born to them as mothers, they were being pointed toward as
  experts, etc.)  This was apparently covered up for a long time while birth
  cooldowns were mistakenly set to zero.  Related to #967

--Support for new GH message and sending associated emote.




Version 397    2023-October-20

--Fixed ambiguity in English.txt file with two orderCommand values defined.
  Fixes #950

--Gesture maintained when flipping left/right due to mouse movement.
  Part of #953

--Fixed so that gestures from players don't overwrite each other (which was
  causing a player's gestures to switch randomly as other players gesture on
  the same sever).  Fixes #953





Editor Fixes:

--Pickers now show 4 lines of text per item until mouse-over, when text of
  moused item is expanded.  No more overlapping text in pickers, for items
  with long descriptions.

--Description field in Object Editor automatically rewinds to start of field
  when a new object is loaded (it used to auto-position at the end of the text
  description).




Server Fixes:

--Fixed so that if you disconnect and re-join the game, you always rejoin an
  existing life if you're still alive, even if you request twin status during
  the re-join.  Before, a request for twin status during rejoin would result in
  your previous life suddenly ending.  Fixes #934

--When top leader uses the /LEADER command, it now tells them that they are the
  leader, and tells them their title.  It used to say +NO LEADER+, which was
  confusing, since that is what is also shown for players who are leaderless.
  Fixes #936
