@@ -1,0 +1,7 @@
+OUTCROP WHOOSHES IMPERFECTLY
+CHEESECLOTH FURROW POMPOSITY
+COMFORT UPHOLSTERY SHOWPIECE
+REMORSEFUL WITCHES PHOTOCOPY
+FORSWORE SPLOTCHY MOUTHPIECE
+TOMFOOLERY CROUCHES WHIPPETS
+WOOLIEST HOPSCOTCH PERFUMERY
